Fix bug on first rows for dashboard, logs limited to 10

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,3 +56,21 @@
 .align-left{
     text-align: left;
 }
+
+span {
+    padding: 16px;
+    height: 10px;
+    width: 100px;
+    margin: 2px;
+}
+.success {
+    background-color: green;
+    
+}
+.warning {
+    background-color: yellow;
+    
+}
+.alert {
+    background-color: red;  
+}  
